<resources>
    <string name="app_error">Application Error</string>
    <string name="error_title">Error</string>
    <string name="other_error">Something went wrong. Please try again.</string>
    <string name="login_error">Unable to login with provided credentials.</string>
    <string name="server_error">Cannot connect to server.</string>
    <string name="account_locked">Account locked. Please contact administrator.</string>
    <string name="account_verification_failed">Failed to verify your account.</string>
    <string name="invalid_org_or_desk">Invalid organization or desk serial number. Do you want to proceed with guest account?</string>
    <string name="new_organization_assigned">You need to login again to use the desk.</string>
    <string name="information">Information</string>
    <string name="notice">Notice</string>
    <string name="congratulations">Congratulations!</string>
    <string name="desk_not_registered">Desk is not registered. Do you want to proceed with guest account?</string>
    <string name="serial_number_not_found">Cannot find serial number.</string>
    <string name="unknow_error">Unknown Error</string>
    <string name="account_verification">Please confirm your email address.</string>
    <string name="no_profile_settings">Unable to get activity profile.</string>
    <string name="bluetooth_off">Bluetooth is powered off. Please enable it on the phone settings.</string>
    <string name="warning">Warning</string>
    <string name="error_code_14">Please ensure that you did unpair the device on the phone settings and as well the device is on pairing mode.</string>
    <string name="ble_connection_error">Unable to pair device. Please try again.</string>
    <string name="invalid_pin_code">Invalid pin code. Please try again and make the sure the device is on pairing mode.</string>
    <string name="ble_connection_error_device">Unable to pair device. Please try again and make the sure the device is on pairing mode.</string>
    <string name="device_not_connected">Device not connected.</string>
    <string name="desktop_has_priority">Desktop has priority.</string>
    <string name="device_new_pair">Device disconnected, new paring request was initiated.</string>
    <string name="desk_currently_booked">Desk is currently booked.</string>
    <string name="sp_default_description">Default Description</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_register">New User</string>
    <string name="lbl_guest">Guest</string>
    <string name="lbl_forgot">Forgot Password</string>
    <string name="verify_password_placeholder">Verify Password</string>
    <string name="btn_connect_text">Connect</string>
    <string name="welcome_string">Welcome</string>
    <string name="unable_to_login">Unable to login with provided credentials.</string>
    <string name="unable_to_register">Unable to register with provided credentials.</string>
    <string name="email_password_required">Email and Password are required.</string>
    <string name="activate_title">Activate account</string>
    <string name="activate_placeholder">Activate Code</string>
    <string name="resend_activation_title">Resend Activation Code</string>
    <string name="login_empty">Username and Password is required.</string>
    <string name="login_invalid">Invalid email or password.</string>
    <string name="login_invalid_email">Invalid email address.</string>
    <string name="login_email_required">Email Address Required.</string>
    <string name="login_password_required">Password required.</string>
    <string name="login_verify_password_required">Verify Password required.</string>
    <string name="verify_password_password_not_equal">Password and verify password is not the same.</string>
    <string name="login_empty_code">Validation code required.</string>
    <string name="login_account_locked">Account is locked.</string>
    <string name="login_verify_account">Please verify your account.</string>
    <string name="login_invalid_code">Invalid activation code.</string>
    <string name="login_no_user">Your email should be associated with organization, or connect to a a desk before you can proceed.</string>
    <string name="login_activate_resend_code">Please check your registered email for the activation code.</string>
    <string name="register_empty">All fields are required.</string>
    <string name="register_verify_password">Verify Password</string>
    <string name="register_password_mismatch">New and verify password mismatched.</string>
    <string name="register_verify_password_required">Verify Password Required.</string>
    <string name="register_register">Register</string>
    <string name="forgot_empty_form">Password and verify password required.</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="forgot_email_content">Send reset code to my email.</string>
    <string name="forgot_reset_code">Enter Reset Code</string>
    <string name="forgot_validate_code">Validate Code</string>
    <string name="forgot_new_password">New Password</string>
    <string name="forgot_verify_new_password">Verify New Password</string>
    <string name="forgot_invalid_pincode">Invalid Pincode</string>
    <string name="forgot_pincode_required">Pin code required.</string>
    <string name="forgot_success_request_pincode">Please check your email for the reset password code.</string>
    <string name="forgot_success_reset_password">Password has been reset, please login with your email and password.</string>
    <string name="forgot_reset_screen_desc">Send reset code to my email</string>
    <string name="password_reset_code">Reset Code</string>
    <string name="success_title">Success!</string>
    <string name="thanks">Thank you!</string>
    <string name="signup_message">Please check your email to activate your account.</string>
    <string name="profile_updated">Your profile has been updated.</string>
    <string name="survey_success">We have received your response, continue to update to improve your health.</string>
    <string name="request_success">Request completed.</string>
    <string name="notice_title">Notice</string>
    <string name="bluetooth_permission">Please allow the PulseEcho app to access the bluetooth service in your phone settings privacy section.</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enable">Enable</string>
    <string name="settings">Settings</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_agree">Agree</string>
    <string name="app_name">PulseEcho</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_device_list">Detected Devices</string>
    <string name="alert_disconnected">Disconnected</string>
    <string name="alert_disconnected_message">Disconnected or unable to connect to device.</string>
    <string name="ble_device_list_title">Pair Device"</string>
    <string name="bank_stars">Bank Stars</string>
    <string name="daily_title">Daily</string>
    <string name="total_title">Total</string>
    <string name="list_stars">List Stars</string>
    <string name="manual_notifier">We’ve noticed that your desk has been inactive for too long. To achieve the most benefit from your Smartpods workstation, we recommend you move at least twice each hour.</string>
    <string name="safety_title">Alert!</string>
    <string name="safety_message">Please ensure that there are no obstacles around and under the desk.</string>
    <string name="active_stars_title">Active Stars</string>
    <string name="heart_fills_up">You have added progress in your heart, keep up the good work.</string>
    <string name="risk_title">Health Risk</string>
    <string name="risk_screen_title">Health Risk Scrore</string>
    <string name="risk_low">Low</string>
    <string name="risk_medium">Medium</string>
    <string name="risk_high">High</string>
    <string name="deskHeight_title">Height Settings</string>
    <string name="current_height">Current Height</string>
    <string name="stand_title">Set Stand</string>
    <string name="sit_title">Set sit</string>
    <string name="set_standing_error">The standing position needs to be greater than the sit position.</string>
    <string name="set_sitting_error">The sitting position needs to be greater than the stand position.</string>
    <string name="sit_stand_diff_error">The difference between sitting and standing must be greater than.</string>
    <string name="sit_stand_adjusted">Your sit or stand height has been adjusted on this desk.</string>
    <string name="heart_statistics">Heart Statistics</string>
    <string name="heart_accumulation">Heart Accumulation</string>
    <string name="desk_statistic_title">Desk Statistics</string>
    <string name="desk_heart_summary">Heart Summary</string>
    <string name="desk_heart_average_fill">Average Time to fill Heart</string>
    <string name="desk_heart_monthly_progress">Monthly Progress</string>
    <string name="desk_heart_monthly_progress_hour_value">0 hour</string>
    <string name="desk_heart_monthly_progress_value">0 %</string>
    <string name="desk_heart_risk_assessment">Risk assessment</string>
    <string name="desk_heart_hour_fill_">Risk assessment</string>
    <string name="low_risk_description">Congratulations! <br />You have been classified with a LOW health risk score. This is in part due to amount of movement that you are successfully completing on a daily basis at your desk. Keep up the great work and continue to move regularly throughout the day.</string>
    <string name="medium_risk_description">You are showing EARLY indicators associated to a MEDIUM health score. <br /> This could be due to a few reasons such as: <br /> your BMI, Health survey score or daily desk movements.</string>
    <string name="high_risk_description">You are showing SEVERAL indicators associated to a HIGH health score. <br /> This could be due to a several reasons such as: <br /> your BMI, Health survey score or daily desk movements.</string>
    <string name="risk_recommendations_title">Recommendations</string>
    <string name="risk_status_title">Status</string>
    <string name="pair_title">Pair</string>
    <string name="user_profile_title">User Profile</string>
    <string name="action_sheet_title">Please select and option.</string>
    <string name="deparments_title">Please choose your department.</string>
    <string name="survey_title">Survey: MSK</string>
    <string name="survey_nav_title">Survey</string>
    <string name="survey_message">New survey available. Do you want to proceed?</string>
    <string name="survey_no_answers">Survey questions are not answered. Please go over and update each question.</string>
    <string name="control_title">Controls</string>
    <string name="password_change">Password Change</string>
    <string name="empty_form">All fields are required.</string>
    <string name="email">Email</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="bmi_title">Body Mass Index</string>
    <string name="bmi_formular">Weight / Height ( in2 )</string>
    <string name="bmi_sub_title">This will classify you as:</string>
    <string name="bmi_underweight_value">Underweight (&lt;18.5)</string>
    <string name="bmi_healthy_weight">Healthy Weight (18.5 - 24.9)</string>
    <string name="bmi_overweight">Overweight (25 - 29.9)</string>
    <string name="bmi_obese">Obese (&gt;30)</string>
</resources>