<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/ForgotPasswordConstraintLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/new_login_bg"
tools:context=".Activity.PulseForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtForgotLabel"
                style="@style/PulseScreenTitleStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:gravity="center_vertical"
                android:text="@string/lbl_forgot"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtForgotDesc"
                style="@style/PulseScreenDescStyle"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:text="@string/forgot_reset_screen_desc" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtForgotEmailAddress"
                style="@style/PulseTextField"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/email_placeholder"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textEmailSubject"
                android:labelFor="@id/txtPassword"
                android:text="">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtForgotEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:id="@+id/container1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtForgotEmailAddress">


                <Button
                    android:id="@+id/btnForgotSubmit"
                    style="@style/PulseRoundedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/button_margin"
                    android:layout_weight="1"
                    android:background="@drawable/sp_button_state_selector"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/btnForgotBack"
                    style="@style/PulseRoundedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/button_margin"
                    android:layout_weight="1"
                    android:background="@drawable/sp_button_state_selector"
                    android:text="@string/back" />
            </LinearLayout>


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>